infrastructure/k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: hashingapi
  namespace: hashing
spec:
  selector:
    app: hashing
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
