infrastructure/k8s/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: hashing
  namespace: movetokube
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - secretName: hashing-tls
  rules:
    - host: hashing.movetokube.com
      http:
        paths:
          - path: /
            backend:
              serviceName: hashingapi
              servicePort: 80
